# copilot-x-cli

./: .gitignore  LICENSE  README.md  api.py  auth.py  cli.py  constants.py  devenv.nix  pyproject.toml  request.py
api-info/: classify.json  edit.json  explain.json  explain.txt  vscode-commands.md
api-info/texts/: classify.txt  edit.txt
x_cli/: __main__.py  actions.py  api.py  chat.py  cli.py  constants.py  errors.py
