[tool.poetry]
name = "x-cli"
version = "0.6.0"
description = "Unofficial copilot x chat python client"
authors = ["Erik Karsten <erik@opcode.xyz>"]
license = "MIT"
readme = "README.md"
packages = [{include = "x_cli"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
typer = {extras = ["all"], version = "^0.9.0"}
ipython = "^8.13.2"
pygments = "^2.15.1"

[tool.poetry.scripts]
x-cli = "x_cli.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
